# zwift-race-finder

./: .env.example  .envrc  .gitignore  .gitmodules  AGENTS.md  BITWARDEN_SETUP.md  CLAUDE.md  COPYRIGHT  Cargo.toml  DEPLOYMENT.md  FILES_TO_CLEANUP.md  GITHUB_CONTEXT_INSIGHTS.md  GIT_CONTEXT_INSIGHTS.md  HANDOFF.md  HANDOFF_2025-05-25.md  LICENSE-MIT  LOG_MANAGEMENT_HANDOFF.md  LOG_MANAGEMENT_PLAN.md  LOG_MANAGEMENT_TODO.md  LOG_MIGRATION_GUIDE.md  MUTATION_TESTING_SUMMARY.md  PROJECT_CONTEXT_PLAN.md  PROJECT_CONTEXT_TODO.md  PROJECT_WISDOM.md  PROJECT_WISDOM_ARCHIVE_20250602.md  PROJECT_WISDOM_ARCHIVE_20250614.md  PROJECT_WISDOM_RECENT.md  PROJECT_WISDOM_SUMMARY.md  README.md  REFACTORING_EXPLAINED.md  REQUIREMENTS.md  TEST_FIXES_20250603_211433.md  UNIFIED_CONTEXT_PLAN.md  ZWIFT_API_LOG.md  ZWIFT_API_LOG_2025-05-25.md  ZWIFT_API_LOG_RECENT.md  ZWIFT_API_LOG_SUMMARY.md  analyze_actual_speeds.sql  analyze_uncovered_functions.py  bitwarden_setup.sh  (+74 more)
.cargo/: mutants.toml
.claude/: settings.local.json
analysis/: decisions.md  findings.md  progress.md  structure.md
archive/: ALL_ARCHIVE.md  HANDOFF.md  README.md  REPO_CURRENT_STATE.md  todo.md
benches/: ocr_benchmark.rs  ocr_benchmarks.rs  performance.rs
docs/: 2025-06-06-10-23-16.fit  ALGORITHMS.md  ALL_DOCUMENTATION.md  DOCUMENTATION_MIGRATION_PLAN.md  PROJECT_WISDOM.md  README.md
mutants.out-backup-20250605_142149/: lock.json  mutants.json  outcomes.json
mutants.out-backup-20250605_150740/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out-backup-20250605_150935/: lock.json  mutants.json  outcomes.json
mutants.out-backup-20250605_151328/: lock.json  mutants.json  outcomes.json
mutants.out-backup-20250605_152415/: lock.json  mutants.json  outcomes.json
mutants.out-backup-20250605_173044/: lock.json  mutants.json
ocr-configs/: 1920x1080_v1.67.0.json  1920x1080_v1.67.0_manual.json
proptest-regressions/: units_testing.txt
scripts/: import_from_zwift_offline.sh  refresh_zwiftpower_stats.sh
sessions/: PROJECT_WISDOM_SESSION_20250526_001.md  PROJECT_WISDOM_SESSION_20250527_001.md  SESSION_20250106_204900.md  SESSION_20250106_205000.md  SESSION_20250106_235200.md  SESSION_20250106_CHECKPOINT.md  SESSION_20250106_DISCOVERY_SUMMARY.md  SESSION_20250106_REFACTORING_COMPLETE.md  SESSION_20250106_REFACTORING_PHASE1_COMPLETE.md  SESSION_20250106_REFACTORING_PLAN_ALIGNMENT.md  SESSION_20250106_REFACTORING_TOOLS_AND_CONSTANTS.md  SESSION_20250106_REGRESSION_TESTS_AND_MUTATION_GUIDE.md  SESSION_20250106_TEST_FIXES.md  SESSION_20250108_145000_UOM_V2_FRAMEWORK_COMPLETE.md  SESSION_20250603_124800.md  SESSION_20250604_100_COVERAGE_EXECUTION.md  SESSION_20250604_COVERAGE_BASELINE.md  SESSION_20250604_PHASE4A_PROGRESS.md  SESSION_20250604_TESTING_RESEARCH.md  SESSION_20250605_MUTATION_OPTIMIZATION.md  SESSION_20250605_REFACTORING_TESTS.md  SESSION_20250613_200046.md  SESSION_20250619_215500.md  SESSION_20250619_222000.md  SESSION_CHECKPOINT_190515.md  SESSION_CHECKPOINT_232800.md  SESSION_CHECKPOINT_234500.md  ZWIFT_API_LOG_SESSION_20250525_001.md  ZWIFT_API_LOG_SESSION_20250526_002.md  ZWIFT_API_LOG_SESSION_20250526_005.md  ZWIFT_API_LOG_SESSION_20250527_001.md  ZWIFT_API_LOG_SESSION_20250527_002.md  ZWIFT_API_LOG_SESSION_20250527_003.md  ZWIFT_API_LOG_SESSION_20250527_004.md  ZWIFT_API_LOG_SESSION_20250527_005.md
src/: ab_testing.rs  api.rs  cache.rs  category.rs  commands.rs  compatibility.rs  config.rs  constants.rs  database.rs  duration_estimation.rs  errors.rs  estimation.rs  event_analysis.rs  event_display.rs  event_filtering.rs  formatting.rs  lib.rs  main.rs  models.rs  ocr_compact.rs  ocr_config.rs  ocr_constants.rs  ocr_image_processing.rs  (+11 more)
tools/ocr/: CALIBRATION_GUIDE.md  COMPACT_SUMMARY.md  CORE_ENHANCEMENTS.md  DEVELOPMENT_LOG.md  DOCUMENTATION_UPDATES_20250109.md  FINAL_COMPARISON_SUMMARY.md  OCR_COMPARISON_FINDINGS.md  PARALLEL_OCR_IMPLEMENTATION.md  PARALLEL_OCR_PERFORMANCE_ANALYSIS.md  PERFORMANCE_TRUTH.md  QUICK_REFERENCE.md  README.md  RUST_IMPLEMENTATION_STATUS.md  RUST_IMPLEMENTATION_TODO.md  SESSION_SUMMARY.md  SESSION_SUMMARY_20250109_RUST_V1.1.md  SETUP_GUIDE.md  TECHNICAL_DETAILS.md  TECHNICAL_REFERENCE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  ZWIFT_POSITIONS_RESEARCH.md  analyze_ui_structure.py  calibrate_like_original.py  calibrate_multipass.py  calibrate_with_paddleocr.py  calibrate_with_vision.py  compare_ocr_compact.py  debug_ocr.py  debug_visualizer.py  debug_visualizer_v3.py  field_specific_preprocessing_patterns.md  find_leaderboard.py  fix_ui_coordinates.py  install_ocr_deps.sh  leaderboard_extractor.py  leaderboard_extractor_v2.py  leaderboard_extractor_v3.py  maskfile.md  pyproject.toml  (+24 more)
tools/ocr/ocr-configs/: 1920x1080_v1.67.0_all_detections.json  1920x1080_v1.67.0_auto.json  1920x1080_v1.67.0_auto_no_padding.json  1920x1080_v1.67.0_multipass.json  1920x1080_v1.67.0_targeted.json  1920x1080_v1.67.0_targeted_v2.json
tools/ocr/wip-claude/: 20250109_150000_ocr_parallel_optimization_plan.md  20250109_160000_parallel_optimization_results.md  20250110_161000_ocr_testing_improvements.md
(+310 files in other folders)
