[package]
name = "zwift-race-finder"
version = "0.1.0"
edition = "2021"
authors = ["Jack Chidley"]
description = "Find Zwift races that match your target duration and racing score"
homepage = "https://github.com/jchidley/zwift-race-finder"
repository = "https://github.com/jchidley/zwift-race-finder"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "zwift_race_finder"
path = "src/lib.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
regex = "1.0"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
keyring = { version = "3.0", optional = true }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"
mockito = "1.0"
criterion = "0.5"
insta = { version = "1.43.1", features = ["yaml"] }
rstest = "0.25.0"
serde_yaml = "0.9.34"

[[bench]]
name = "performance"
harness = false

[profile.mutants]
inherits = "test"
debug = "none"
opt-level = 1

[features]
default = []
keyring-storage = ["keyring"]
