[project]
name = "zwift-ocr-telemetry"
version = "0.1.0"
description = "OCR-based telemetry extraction for Zwift screenshots and video"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "easyocr>=1.7.0",
    "pillow>=10.0.0",
    "click>=8.1.8",
    "groq>=0.27.0",
    "matplotlib>=3.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zwift-ocr = "zwift_ocr_prototype:main"

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "black>=24.8.0",
]
